# smartsecure

./: README.md
Code_Files/2016_Old_Code/: client.c  decider  decider.cpp  server_dtls_cert.sh  server_dtls_psk.sh  server_tls_cert.sh  server_tls_psk.sh
Code_Files/2017_Class_Demo_Latest/: client  decider.php  iot-final.rspec  prettier.html  scheme_test_linux.php  wolf.html
Code_Files/2017_Class_Demo_Old/: Pseudocode  UI.php  wolf.html
Code_Files/2017_Class_Demo_Old/Code/: decider.php  server  server.c
Code_Files/2017_Security_Scheme_Benchmarker/: CMakeLists.txt  client.c  mac-scheme-test.cpp  scheme-test.cpp
Data_Files/: Factor analysis PPT and report resources.docx  Scheme categories.xlsx  clusterinfomration1.xlsx  clusters.xlsx  device profiles.xlsx  formula explanation with pictures.docx  output category analysis.docx  output_all.txt
Data_Files/formula cluster-related/: datawithcluster.xlsx
